k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openware
  labels:
    app: xch-cms
