k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xch-cms
  namespace: openware
  labels:
    app: xch-cms
    component: web
spec:
  type: ClusterIP
  selector:
    app: xch-cms
    component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
